--- a/css/index.less
+++ b/css/index.less
@@ -453,9 +453,9 @@ html,body{
     padding: 0.5rem;
     display: none;
     span{
-      font-size: 0.3rem;
+      font-size: 0.25rem;
       display: block;
-      line-height: 0.6rem;
+      line-height: 0.5rem;
       color: @color-text;
       .animation (@name:bounceInDown, @duration:0.5s);
       &:nth-child(1){
@@ -463,15 +463,16 @@ html,body{
       }
       &:nth-child(2){
         font-size: 0.4rem;
-        margin:0.2rem 0;
+        margin:0.1rem 0;
         font-weight: bold;
 
       }
     }
     p{
-      font-size: 0.3rem;
+      font-size: 0.2rem;
       display:block;
-      line-height: 0.6rem;
+      line-height: 0.4rem;
+      color: @color-text;
       .animation (@name:bounceInDown, @duration:0.5s);
       em{
         font-weight: bold;
