--- a/css/index.less
+++ b/css/index.less
@@ -94,7 +94,7 @@ html,body{
   .pic{
     width: 2rem;
     height: 2rem;
-    background: url("@{img-url}/icon/pic.jpg") no-repeat;
+    background: url("@{img-url}/icon/pic.png") no-repeat;
     background-size: @background-size;
     border-radius: 50%;
     position: absolute;
